# dragonguide

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  WRITEUP_AND_VIDEO.md  app.py  pyproject.toml
.github/: REPO_METADATA.md
.github/workflows/: ci.yml
data/: official_videos.json
data/fixtures/: lore.json  transcripts.json
docs/: architecture.mmd
mcp_server/: README.md  server.py
scripts/: secret_scanner.py
src/dragonguide/: __init__.py  __main__.py  config.py  coordinator.py  guardrails.py  offline.py  schemas.py
src/dragonguide/agents/: adaptation_diff_agent.py  highlight_agent.py  lore_research_agent.py  spoiler_guard_agent.py  transcription_agent.py
tests/: test_pipeline.py  test_spoiler_guard.py
