[project]
name = "dragonguide"
version = "0.1.0"
description = "Spoiler-aware multi-agent companion for HBO's House of the Dragon (Kaggle x Google AI Agents Capstone)."
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "mcp>=1.0.0",
    "google-genai>=0.3.0",
    "gradio>=4.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "youtube-transcript-api>=0.6.2",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
dragonguide = "dragonguide.__main__:main"


[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
